2005-11-25  Frank Ch. Eigler  <fche@elastic.org>

PR 1336.
	* tapsets.cxx (translate_final_fetch_or_store): Remove apparently
	unnecessary check.
	* testsuite/transok/ten.stp: New test for void* integerification.